Hoping this works!

--- a/Mission6Assignment/appsettings.json
+++ b/Mission6Assignment/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "BlahConnection": "Data Source = MovieForm.sqlite"
+        "BlahConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
     }
 }
